# pareas-benchmarks

./: .gitignore  README.md  meson.build  meson_options.txt
results/carbonite.liacs.nl/cuda/: 1.par.txt  2.par.txt  3.par.txt  4.par.txt  5.par.txt  6.par.txt  7.par.txt  results.json
scripts/: benchmark_pareas.py  profiler.py  stages_throughput_plot.py  total_throughput_plot.py
subprojects/: pareas.wrap
testdata/: 1.c  1.par  2.c  2.par  3.c  3.par  4.c  4.par  5.c  5.par
